--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <section id="womanFilter">
   <h2>Zapatillas de Mujer</h2>
   <div id="filtros" class="flex-container"></div>
+  <input type="number" id="priceFilter" class="flex-container">
+  <button onclick="filterProducts()">Search</button>
+  <button onclick="clearFilters()">Clear Filters</button>
 </section>
 <section id="zapatillas" class="flex-container"></section>
 </body>
